--- a/Ros/roboin_navigation/param/move_base_params.yaml
+++ b/Ros/roboin_navigation/param/move_base_params.yaml
@@ -1,9 +1,8 @@
-shutdown_costmaps: false
-controller_frequency: 10.0
-planner_patience: 5.0
-controller_patience: 15.0
-conservative_reset_dist: 3.0
-planner_frequency: 5.0
-oscillation_timeout: 10.0
-oscillation_distance: 0.2
+# base_local_planner: "dwa_local_planner/DWAPlannerROS"
+# base_local_planner: "base_local_planner/TrajectoryPlannerROS"
 
+base_local_planner: "eband_local_planner/EBandPlannerROS"
+# base_local_planner: "teb_local_planner/TebLocalPlannerROS"
+
+base_global_planner: "navfn/NavfnROS"
+# base_global_planner: "global_planner/GlobalPlanner"
