--- a/Ros/roboin_navigation/param/local_planner_params.yaml
+++ b/Ros/roboin_navigation/param/local_planner_params.yaml
@@ -1,52 +1,99 @@
-DWAPlannerROS:
+TebLocalPlannerROS:
 
-# Robot Configuration Parameters
-  max_vel_x: 0.8
-  min_vel_x: -0.4
+# odom_topic: odom
+# map_frame: /map
 
-  max_vel_y: 0.4
-  min_vel_y: -0.4
+ # Trajectory
 
-# The velocity when robot is moving in a straight line
-  max_trans_vel:  0.8
-  min_trans_vel:  0.11
+ teb_autosize: True
+ dt_ref: 0.3
+ dt_hysteresis: 0.1
+ global_plan_overwrite_orientation: True
+ # global_plan_viapoint_sep: 0.2
+ allow_init_with_backwards_motion: True
+ max_global_plan_lookahead_dist: 1.0
+ feasibility_check_no_poses: 2
+ # via_points_ordered: True
+ exact_arc_length: True 
+ wheelbase: 0.0
+ # Robot
 
-  max_rot_vel: 2.75
-  min_rot_vel: 1.37
+ max_vel_x: 0.8
+ max_vel_y: 0.8
+ max_vel_x_backwards: 0.2
+ max_vel_theta: 0.3
+ acc_lim_x: 1.0
+ acc_lim_y: 1.0
+ acc_lim_theta: 4.0
+ min_turning_radius: 0.0
+ footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
+   type: "line"
+   radius: 0.2 # for type "circular"
+   line_start: [-0.15, 0.0] # for type "line"
+   line_end: [0.2, 0.0] # for type "line"
+   front_offset: 0.2 # for type "two_circles"
+   front_radius: 0.2 # for type "two_circles"
+   rear_offset: 0.2 # for type "two_circles"
+   rear_radius: 0.2 # for type "two_circles"
+   vertices: [ [0.25, -0.05], [0.18, -0.05], [0.18, -0.18], [-0.19, -0.18], [-0.25, 0], [-0.19, 0.18], [0.18, 0.18], [0.18, 0.05], [0.25, 0.05] ] # for type "polygon"
 
-  acc_lim_x: 2.5
-  acc_lim_y: 0.0
-  acc_lim_theta: 3.2
+ # GoalTolerance
 
-# Goal Tolerance Parametes
-  xy_goal_tolerance: 0.05
-  yaw_goal_tolerance: 0.17
-  latch_xy_goal_tolerance: false
+ xy_goal_tolerance: 0.1
+ yaw_goal_tolerance: 0.1
+ free_goal_vel: false
 
-# Forward Simulation Parameters
-  sim_time: 1.5
-  vx_samples: 20
-  vy_samples: 0
-  vtheta_samples: 40
-  controller_frequency: 10.0
+ # Obstacles
 
-# Trajectory Scoring Parameters
-  path_distance_bias: 32.0
-  goal_distance_bias: 15.0
-  occdist_scale: 0.04
-  forward_point_distance: 0.325
-  stop_time_buffer: 0.2
-  scaling_speed: 0.25
-  max_scaling_factor: 0.2
+ min_obstacle_dist: 0.4
+ include_costmap_obstacles: True
+ legacy_obstacle_association: True # The current version of teb_local_planner (0.6.6) seems to sometimes rotate very slowly without legacy_obstacle_association
+ costmap_obstacles_behind_robot_dist: 1.0
+ obstacle_poses_affected: 30
+ costmap_converter_plugin: ""
+ costmap_converter_spin_thread: True
+ costmap_converter_rate: 5
 
-# Oscillation Prevention Parameters
-  oscillation_reset_dist: 0.05
+ include_dynamic_obstacles: True
+ dynamic_obstacle_inflation_dist: 0.5
 
-# Debugging
-  publish_traj_pc : true
-  publish_cost_grid_pc: true
+ # Optimization
 
-EBandPlannerROS:
+ no_inner_iterations: 5
+ no_outer_iterations: 4
+ optimization_activate: True
+ optimization_verbose: False
+ penalty_epsilon: 0.0
+ weight_max_vel_x: 1
+ weight_max_vel_theta: 1
+ weight_acc_lim_x: 1
+ weight_acc_lim_theta: 1
+ weight_kinematics_nh: 1
+ weight_kinematics_forward_drive: 1
+ weight_kinematics_turning_radius: 1
+ weight_optimaltime: 1
+ weight_obstacle: 0.1 # 50
+ weight_dynamic_obstacle: 10 # not in use yet
+ selection_cost_hysteresis: 1.0
+ selection_obst_cost_scale: 1.0
+ selection_alternative_time_cost: False # not in use yet
+
+ # Homotopy Class Planner
+
+ enable_homotopy_class_planning: False
+ enable_multithreading: True
+ simple_exploration: False
+ max_number_classes: 4
+ roadmap_graph_no_samples: 15
+ roadmap_graph_area_width: 5
+ h_signature_prescaler: 0.5
+ h_signature_threshold: 0.1
+ obstacle_keypoint_offset: 0.1
+ obstacle_heading_threshold: 0.45
+ visualize_hc_graph: False
+
+
+ EBandPlannerROS:
    xy_goal_tolerance: 0.03
    yaw_goal_tolerance: 0.05
 
@@ -84,3 +131,4 @@ EBandPlannerROS:
    # bubble_velocity_multiplier: 2.0
    # rotation_threshold_multiplier: 1.0
    # disallow_hysteresis: false
+
