--- a/Ros_old/roborts/roborts_decision/CMakeLists.txt
+++ b/Ros_old/roborts/roborts_decision/CMakeLists.txt
@@ -42,8 +42,11 @@ add_executable(behavior_test_node
   example_behavior/chase_behavior.h
   example_behavior/patrol_behavior.h
   example_behavior/search_behavior.h
+  example_behavior/goal_behavior.h
   behavior_test.cpp
   executor/chassis_executor.cpp
+  executor/gimbal_executor.cpp
+  executor/gimbal_executor.h
   )
 
 target_link_libraries(behavior_test_node
