behavior fix, testing python notebook for decision

--- a/Ros/Roborts_behavior_interface/icra_roboin_control/CMakeLists.txt
+++ b/Ros/Roborts_behavior_interface/icra_roboin_control/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   roborts_common
   roborts_costmap
   roborts_decision
+  icra_roboin_msgs
 
 )
 
@@ -23,44 +24,7 @@ include_directories(
 
 catkin_package()
 
-add_executable(navigation_control_node
-  src/navigation_control.cpp
-  )
 
-target_link_libraries(navigation_control_node
-  PRIVATE
-  ${catkin_LIBRARIES}
-  )
-
-
-
-add_executable(goal_cancel_node
-  src/goal_cancel.cpp
-  )
-
-target_link_libraries(goal_cancel_node
-  PRIVATE
-  ${catkin_LIBRARIES}
-  )
-
-
-add_executable(behavior_selector_node
-  src/behavior_selector.cpp
-  )
-
-target_link_libraries(behavior_selector_node
-  PRIVATE
-  ${catkin_LIBRARIES}
-  )
-
-add_executable(fake_enemy_pose_node
-  src/fake_enemy_pose.cpp
-  )
-
-target_link_libraries(fake_enemy_pose_node
-  PRIVATE
-  ${catkin_LIBRARIES}
-  )
 
 
 
@@ -72,3 +36,5 @@ target_link_libraries(new_behavior_test
   PRIVATE
   ${catkin_LIBRARIES}
   )
+add_dependencies(new_behavior_test
+  icra_roboin_msgs_generate_messages)
