added jupyter notebook tutorial

--- a/Ros/Roborts_behavior_interface/icra_roboin_behavior/CMakeLists.txt
+++ b/Ros/Roborts_behavior_interface/icra_roboin_behavior/CMakeLists.txt
@@ -26,6 +26,8 @@ catkin_package()
 add_executable(behavior_node
   enums.h
   behavior/move_behavior.h
+  behavior/manual_speed_behavior.h
+  behavior/manual_accel_behavior.h
   executor/chassis_executor.cpp
   executor/gimbal_executor.cpp
   blackboard/blackboard.cpp
@@ -40,6 +42,24 @@ target_link_libraries(behavior_node
   )
 
 add_dependencies(behavior_node
+  roborts_msgs_generate_messages
+  icra_roboin_msgs_generate_messages)
+
+
+
+
+
+
+
+add_executable(behavior_test
+  behavior_test.cpp
+  )
+
+target_link_libraries(behavior_test
+  PRIVATE
+  ${catkin_LIBRARIES}
+  )
+add_dependencies(behavior_test
   roborts_msgs_generate_messages
   icra_roboin_msgs_generate_messages)
 
