--- a/Ros/Roborts_behavior_interface/icra_roboin_msgs/CMakeLists.txt
+++ b/Ros/Roborts_behavior_interface/icra_roboin_msgs/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8.3)
 project(icra_roboin_msgs)
 
 find_package(catkin REQUIRED COMPONENTS
+  rospy
+  roscpp
   std_msgs
   nav_msgs
   geometry_msgs
@@ -9,12 +11,15 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
 )
 
+
+
 add_service_files(
   DIRECTORY srv
   FILES
   BlackboardGeneralInfo.srv
   BehaviorStyleSet.srv
   BehaviorGoalSet.srv
+  SetGoal_2.srv
 )
 
 generate_messages(
@@ -25,7 +30,7 @@ generate_messages(
 )
 
 
-catkin_package()
+catkin_package(CATKIN_DEPENDS message_runtime)
 
 
 
