--- a/Ros/Roborts_behavior_interface/icra_roboin_msgs/package.xml
+++ b/Ros/Roborts_behavior_interface/icra_roboin_msgs/package.xml
@@ -13,6 +13,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+
+  <build_depend>rospy</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
@@ -20,6 +23,8 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>roborts_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+
+  <depend>message_runtime</depend>
 
 
 
