--- a/Ros_old/roborts/roborts_shooter/CMakeLists.txt
+++ b/Ros_old/roborts/roborts_shooter/CMakeLists.txt
@@ -1,22 +1,22 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(roborts_gazebo)
+project(roborts_shooter)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
+add_definitions(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-	roscpp
-	rospy
-	message_generation 
-  	geometry_msgs 
-  	std_msgs 
+  gazebo_ros
+  roscpp
+  roborts_msgs
+  gazebo_msgs
 )
 
 ## System dependencies are found with CMake's conventions
-find_package(Boost REQUIRED COMPONENTS system)
+find_package(gazebo REQUIRED)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -105,13 +105,12 @@ find_package(Boost REQUIRED COMPONENTS system)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES roborts_gazebo
-  CATKIN_DEPENDS message_generation
-  roscpp 
-  geometry_msgs 
-  rospy
-  DEPENDS Boost
+#  INCLUDE_DIRS include
+#  LIBRARIES roborts_shooter
+#  CATKIN_DEPENDS gazebo_ros roscpp
+ DEPENDS
+  roscpp
+  gazebo_ros
 )
 
 ###########
@@ -120,15 +119,11 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
-# include
-# ${catkin_INCLUDE_DIRS}
-#)
+include_directories(${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})
+link_directories(${GAZEBO_LIBRARY_DIRS})
 
 ## Declare a C++ library
-# add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/roboin_model_simulation.cpp
-# )
+add_library(roborts_shooter_plugin src/roborts_shooter_plugin.cc)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -138,7 +133,7 @@ include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/roboin_model_simulation_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/roborts_shooter_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -151,9 +146,7 @@ include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(roborts_shooter_plugin ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
 
 #############
 ## Install ##
@@ -195,7 +188,7 @@ include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_roboin_model_simulation.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_roborts_shooter.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
