--- a/Ros_old/roborts/roborts_gimbal/CMakeLists.txt
+++ b/Ros_old/roborts/roborts_gimbal/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(roborts_gimbal)
 
+add_definitions(-std=c++11)
+
 find_package(catkin REQUIRED COMPONENTS
+  gazebo_ros
   roscpp
   actionlib
   cv_bridge
@@ -14,20 +17,36 @@ find_package(catkin REQUIRED COMPONENTS
   gazebo_msgs
 )
 
+find_package(gazebo REQUIRED)
+
 find_package(OpenCV REQUIRED 
     COMPONENTS
     opencv_highgui)
 
-catkin_package()
+catkin_package(
+  DEPENDS
+    roscpp
+    gazebo_ros
+)
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
+include_directories(${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})
+link_directories(${GAZEBO_LIBRARY_DIRS})
+
+add_library(gazebo_shooter_plugin src/gazebo_shooter.cc)
+
 add_executable(angle_to_command src/angle_to_command.cpp)
 target_link_libraries(angle_to_command
   ${catkin_LIBRARIES}
   ${OpenCV_LIBRARIES})
+
+add_executable(gimbal_test_node src/gimbal_test.cpp)
+target_link_libraries(gimbal_test_node
+  ${catkin_LIBRARIES})
+
 
 # ### INSTALL ###
 
