--- a/Ros_old/roborts/roborts_gimbal/package.xml
+++ b/Ros_old/roborts/roborts_gimbal/package.xml
@@ -17,6 +17,8 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>roborts_msgs</build_depend>
+  <build_depend>gazebo_ros</build_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>control_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
@@ -25,5 +27,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>roborts_msgs</run_depend>
+  <run_depend>gazebo_ros</run_depend>
 
 </package>
