--- a/Ros_old/roborts/roborts_gazebo/package.xml
+++ b/Ros_old/roborts/roborts_gazebo/package.xml
@@ -54,11 +54,11 @@
   <depend>geometry_msgs</depend>
   <depend>message_generation</depend>
   <depend>std_msgs</depend>
+  <depend>gazebo_ros</depend>
 
 
-  <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <gazebo_ros gazebo_model_path="${prefix}/models"/>
+    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
   </export>
 </package>
