--- a/Ros_old/roborts/roborts_gazebo/package.xml
+++ b/Ros_old/roborts/roborts_gazebo/package.xml
@@ -55,6 +55,7 @@
   <depend>message_generation</depend>
   <depend>std_msgs</depend>
   <depend>gazebo_ros</depend>
+  <depend>sensor_msgs</depend>
 
 
   <export>
