--- a/Ros/icra_roboin/icra_roboin_navigation/param/costmap_common_params.yaml
+++ b/Ros/icra_roboin/icra_roboin_navigation/param/costmap_common_params.yaml
@@ -7,3 +7,4 @@ observation_sources: laser_scan_sensor
 
 laser_scan_sensor: {sensor_frame: base_laser_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
 
+transform_tolerance: 3
