--- a/Ros/icra_roboin/icra_roboin_navigation/param/global_costmap_params.yaml
+++ b/Ros/icra_roboin/icra_roboin_navigation/param/global_costmap_params.yaml
@@ -1,8 +1,10 @@
 global_costmap:
   global_frame: map
-  robot_base_frame: base_link
-  update_frequency: 5.0
+  rolling_window: false
+  track_unknown_space: false
   static_map: true
-  inflation_radius: 1
-  cost_scaling_factor: 4
 
+  plugins:
+    - {name: static,                  type: "costmap_2d::StaticLayer"}
+    - {name: obstacles,         type: "costmap_2d::ObstacleLayer"}
+    - {name: inflation,               type: "costmap_2d::InflationLayer"}
