--- a/Ros/icra_roboin/icra_roboin_navigation/param/local_costmap_params.yaml
+++ b/Ros/icra_roboin/icra_roboin_navigation/param/local_costmap_params.yaml
@@ -1,12 +1,9 @@
 local_costmap:
   global_frame: odom
-  robot_base_frame: base_link
-  update_frequency: 5.0
-  publish_frequency: 2.0
-  static_map: false
   rolling_window: true
   width: 3.0
   height: 3.0
-  resolution: 0.05
-  inflation_radius: 0.3
-  cost_scaling_factor: 1
+
+  plugins:
+    - {name: obstacles,           type: "costmap_2d::ObstacleLayer"}
+    - {name: inflation,                 type: "costmap_2d::InflationLayer"}
