--- a/Roborts/roborts_gimbal/package.xml
+++ b/Roborts/roborts_gimbal/package.xml
@@ -2,9 +2,9 @@
 <package>
   <name>roborts_gimbal</name>
   <version>2.0.2</version>
-  <description>Example on how to use the point head action to make the robot look to a given cartesian point</description>
+  <description>Gimbal Control</description>
 
-  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
+  <maintainer email="woong16430@gmail.com">Legendary Pyunny</maintainer>
 
   <license>BSD</license>
 
