--- a/Ros/first_release/icra_roboin_msgs/CMakeLists.txt
+++ b/Ros/first_release/icra_roboin_msgs/CMakeLists.txt
@@ -35,6 +35,8 @@ add_service_files(
   RefereeReload.srv
   ConfirmHit.srv
   AmmoConsume.srv
+  PitchGain.srv
+  YawGain.srv
 )
 
 add_action_files(
