계속 만드는중, 진심 개고통
안끝나 시부럴..

--- a/recognition/V3_01/Robomaster_vision_V3.vcxproj
+++ b/recognition/V3_01/Robomaster_vision_V3.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="src\Data_control.hpp" />
     <ClInclude Include="src\object_detection.hpp" />
     <ClInclude Include="src\pch.hpp" />
+    <ClInclude Include="src\Vision_ros.hpp" />
     <ClInclude Include="src\yolo_class.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
