--- a/recognition/V3_01/Robomaster_vision_V3.vcxproj.filters
+++ b/recognition/V3_01/Robomaster_vision_V3.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="src\Data_control.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="src\Vision_ros.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
