--- a/Roborts/roborts_navigation/param/base_local_planner_params.yaml
+++ b/Roborts/roborts_navigation/param/base_local_planner_params.yaml
@@ -1,8 +1,5 @@
 
 DWAPlannerROS:
-
-
-
   acc_lim_x: 5.0
   acc_lim_y: 5.0
   acc_lim_th: 50.0
@@ -24,12 +21,12 @@ DWAPlannerROS:
   xy_goal_tolerance: 0.1
   latch_xy_goal_tolerance: false
   
-  sim_time: 0.5
+  sim_time: 0.1
   sim_granularity: 0.025
   angular_sim_granularity: 0.1
-  vx_samples: 10
-  vy_samples: 10
-  vth_samples: 15
+  vx_samples: 3
+  vy_samples: 3
+  vth_samples: 5
   controller_frequency: 10.0
 
   path_distance_bias: 64
@@ -39,7 +36,7 @@ DWAPlannerROS:
   stop_time_buffer: 0.2
   scaling_speed: 0.25
   max_scaling_factor: 0.2
-  twirling_scale: 0.1
+  twirling_scale: 10.0
   penalize_negative_x: false
 
   oscillation_reset_dist: 0.05
@@ -59,5 +56,85 @@ TrajectoryPlannerROS:
 
   holonomic_robot: true
 
+
+TebLocalPlannerROS:
+   
+ # Trajectory
+  
+ teb_autosize: True
+ dt_ref: 0.3
+ dt_hysteresis: 0.1
+ global_plan_overwrite_orientation: True
+ allow_init_with_backwards_motion: False
+ max_global_plan_lookahead_dist: 3.0
+ feasibility_check_no_poses: 5
+    
+ # Robot
+         
+ max_vel_x: 0.4
+ max_vel_x_backwards: 0.2
+ max_vel_y: 0.1
+ max_vel_theta: 0.3
+ target_theta: 0.5
+ acc_lim_x: 0.5
+ acc_lim_y: 0.2
+ acc_lim_theta: 0.5
+ min_turning_radius: 0.0 # omni-drive robot (can turn on place!)
+
+ footprint_model:
+   type: "point"
+
+ # GoalTolerance
+    
+ xy_goal_tolerance: 0.2
+ yaw_goal_tolerance: 0.1
+ free_goal_vel: False
+    
+ # Obstacles
+    
+ min_obstacle_dist: 0.25 # This value must also include our robot radius, since footprint_model is set to "point".
+ include_costmap_obstacles: True
+ costmap_obstacles_behind_robot_dist: 1.0
+ obstacle_poses_affected: 30
+ costmap_converter_plugin: ""
+ costmap_converter_spin_thread: True
+ costmap_converter_rate: 5
+
+ # Optimization
+    
+ no_inner_iterations: 5
+ no_outer_iterations: 4
+ optimization_activate: True
+ optimization_verbose: False
+ penalty_epsilon: 0.1
+ weight_max_vel_x: 2
+ weight_max_vel_y: 2
+ weight_max_vel_theta: 1
+ weight_acc_lim_x: 1
+ weight_acc_lim_y: 1
+ weight_acc_lim_theta: 1
+ weight_kinematics_nh: 1 # WE HAVE A HOLONOMIC ROBOT, JUST ADD A SMALL PENALTY
+ weight_kinematics_forward_drive: 1
+ weight_kinematics_turning_radius: 1
+ weight_optimaltime: 1
+ weight_obstacle: 50
+
+ # Homotopy Class Planner
+
+ enable_homotopy_class_planning: True
+ enable_multithreading: True
+ simple_exploration: False
+ max_number_classes: 4
+ selection_cost_hysteresis: 1.0
+ selection_obst_cost_scale: 1.0
+ selection_alternative_time_cost: False
+ 
+ roadmap_graph_no_samples: 15
+ roadmap_graph_area_width: 5
+ h_signature_prescaler: 0.5
+ h_signature_threshold: 0.1
+ obstacle_keypoint_offset: 0.1
+ obstacle_heading_threshold: 0.45
+ visualize_hc_graph: False
 
 
