--- a/Roborts/roborts_navigation/param/base_global_planner_params.yaml
+++ b/Roborts/roborts_navigation/param/base_global_planner_params.yaml
@@ -1,4 +1,4 @@
 GlobalPlanner:
-  use_grid_path: True 
-  use_quadratic: False 
-  use_dijkstra: False
+  use_grid_path: true 
+  use_quadratic: false 
+  use_dijkstra: false
