--- a/Roborts/roborts_navigation/param/costmap_common_params.yaml
+++ b/Roborts/roborts_navigation/param/costmap_common_params.yaml
@@ -1,10 +1,10 @@
 obstacle_range: 5
 raytrace_range: 6
-robot_radius: 0.45
+footprint: [[0.3,0.225],[-0.3,0.225],[-0.3,-0.225],[0.3,-0.225]]
 
 
 observation_sources: laser_scan_sensor
 
 laser_scan_sensor: {sensor_frame: base_laser_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
 
-transform_tolerance: 3
+
