add omega converter

--- a/Roborts/roborts_navigation/CMakeLists.txt
+++ b/Roborts/roborts_navigation/CMakeLists.txt
@@ -24,7 +24,8 @@ catkin_package(
     roborts_msgs
 )
 
-include_directories(${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})
+include_directories(
+  include ${catkin_INCLUDE_DIRS}${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})
 link_directories(${GAZEBO_LIBRARY_DIRS})
 
 add_executable(contact_to_damage src/contact_to_damage.cpp)
@@ -32,3 +33,12 @@ target_link_libraries(contact_to_damage
   ${catkin_LIBRARIES})
 
 add_dependencies(contact_to_damage roborts_msgs_generate_messages)
+
+
+add_executable(omega_converter
+  src/omega_converter.cpp
+)
+add_dependencies(omega_converter ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(omega_converter
+  ${catkin_LIBRARIES}
+)
