--- a/lidar_detector/package.xml
+++ b/lidar_detector/package.xml
@@ -9,19 +9,18 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>geometry_msgs</build_depend>
+  <build_depend>roborts_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>message_generation</build_depend>
 
-  <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>roborts_msgs</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>message_generation</build_export_depend>
 
-  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>roborts_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>nav_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>message_generation</exec_depend>
 
